Implemented RT ticket 621414 - addition of source field to Gene Builder GO term panel.